test/e2e/chainsaw/aigateway/aigatewaydataplane-lifecycle/06-aigatewaydataplane-rollout.yaml
apiVersion: aigateway.konghq.com/v1alpha1
kind: AIGatewayDataPlane
metadata:
  name: ($aigw_dp_name)
  namespace: ($namespace)
spec:
  controlPlaneRef:
    type: konnectNamespacedRef
    konnectNamespacedRef:
      name: ($aigw_cp_name)
  deployment:
    replicas: 1
    podTemplateSpec:
      spec:
        containers:
          - name: aigw
            image: ($aigw_dp_image)
            readinessProbe:
              initialDelaySeconds: 30
            # New env var changes the pod template hash, forcing a real
            # rolling update (new ReplicaSet + new pod).
            env:
              - name: ROLLOUT_TRIGGER
                value: "v2"
  network:
    services:
      ingress:
        type: LoadBalancer
        ports:
          - name: ingress
            port: 443
            targetPort: 8443
