test/e2e/chainsaw/aigateway/aigatewaydataplane-lifecycle/03-assert-not-found.yaml
apiVersion: aigateway.konghq.com/v1alpha1
kind: AIGatewayDataPlane
metadata:
  name: ($aigw_dp_name)
  namespace: ($namespace)
status:
  (conditions[?type == 'KonnectAIGatewayResolved']):
    - status: 'False'
      reason: NotFound
  (conditions[?type == 'Ready']):
    - status: 'False'
      reason: DependenciesNotReady
