test/e2e/chainsaw/aigateway/aigatewaydataplane-lifecycle/05-assert-ready.yaml
apiVersion: aigateway.konghq.com/v1alpha1
kind: AIGatewayDataPlane
metadata:
  name: ($aigw_dp_name)
  namespace: ($namespace)
status:
  (conditions[?type == 'KonnectAIGatewayResolved']):
    - status: 'True'
      reason: Resolved
  (conditions[?type == 'CertificateProvisioned']):
    - status: 'True'
      reason: CertificateProvisioned
  (conditions[?type == 'KonnectCertificateRegistered']):
    - status: 'True'
      reason: KonnectCertificateRegistered
  (conditions[?type == 'ServiceReady']):
    - status: 'True'
      reason: ServiceReady
  (conditions[?type == 'Ready']):
    - status: 'True'
      reason: Ready
  (readyReplicas > `0`): true
  (addresses[0].value != null): true
  (addresses[0].value != ''): true
