test/e2e/chainsaw/aigateway/aigatewaydataplane-lifecycle/06-assert-rolling.yaml
apiVersion: aigateway.konghq.com/v1alpha1
kind: AIGatewayDataPlane
metadata:
  name: ($aigw_dp_name)
  namespace: ($namespace)
status:
  (conditions[?type == 'Ready']):
    - status: 'False'
      reason: WaitingToBecomeReady
